<resources>
    <string name="app_name">ToDoApp(Compose)</string>
    <string name="user_message_task_title_empty">Task has to have a title</string>
    <string name="input_task_name_label">Title</string>
    <string name="input_task_description_label">Description</string>
    <string name="add_edit_task_done">Done</string>
    <string name="detail_task_delete_task">Delete detail task</string>
    <string name="all_tasks_filter_option">Filter</string>
    <string name="all_tasks_clear_completed_option">Clear completed tasks</string>
    <string name="all_tasks_clear_completed_option_title">Clear completed</string>
    <string name="common_back_description">Back</string>
    <string name="common_add_new_task_description">Add new task</string>
    <string name="common_edit_task_description">Edit task</string>
    <string name="filter_option_all">All</string>
    <string name="filter_option_active">Active</string>
    <string name="filter_option_completed">Completed</string>
    <string name="filter_option_all_title">All tasks</string>
    <string name="filter_option_active_title">Active tasks</string>
    <string name="filter_option_completed_title">Completed tasks</string>
    <string name="filter_option_all_no_tasks_message">You have no tasks!</string>
    <string name="filter_option_active_no_active_tasks_message">You have no active tasks!</string>
    <string name="filter_option_completed_no_completed_tasks_message">You have no completed tasks!</string>
    <!-- common -->
    <string name="common_yes_option">Yes</string>
    <string name="common_no_option">No</string>
</resources>